cleanup: get rid of sun.misc.Unsafe warning